--- a/src/components/ui/BannerMessage/BannerMessage.scss
+++ b/src/components/ui/BannerMessage/BannerMessage.scss
@@ -56,6 +56,8 @@
     }
 
     &__text {
+        text-align: left;
+        
         .highlight {
             color: $primary__theme_color;
 
